tsos.css
/* TSOS.css */

body {
  background: #909193 url(distrib/images/steinway.jpg);
  background-size: cover;
  font-family: Helvetica, Verdana, Arial, sans-serif;
  font-size: 12pt;
  font-weight: normal;
  font-style: normal;
}

h1 {
  color: black;
  font-size: 24pt;
  font-weight: normal;
  font-style: normal;
  border-bottom: 1px solid black;
}

h2 {
  color: black;
  font-size: 20pt;
  font-weight: normal;
  font-style: normal;
}

h3 {
  font-family: Helvetica, Verdana, Arial, sans-serif;
  font-size: 16pt;
  font-weight: normal;
  font-style: normal;
}

#display {
  background-color:#DFDBC3;
  border: 2px solid red;
  cursor: default;
}

.normal_button {
  width: 100px;
}

.footerText {
  color: black;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 8pt;
  text-align: center;
}

#divTaskBar{
  background-color: white;
  width: 875px;
}

th, td {
  font-family: Courier New, Courier, monospace;
  border: 1px solid gray;
  padding: 5px;
}

